Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,5 +3,5 @@ demo_job_1:
     - ci
   script:
     - pnpm --version
-    - pnpm i
-    - pnpm start:dev    
+    - pnpm i -g pnpm
+    - pnpm --version
