--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,17 @@
-demo_job_1:
-  tags:
-    - ci
+stages:
+  - build
+
+build:
+  stage: build
+  image: node:14.16.0-buster
+  before_script:
+    - curl -f https://get.pnpm.io/v6.16.js | node - add --global pnpm@7
+    - pnpm config set store-dir .pnpm-store
   script:
-    - pnpm --version
-    - pnpm i -g pnpm
-    - pnpm --version
+    - pnpm install # install dependencies
+  cache:
+    key:
+      files:
+        - pnpm-lock.yaml
+    paths:
+      - .pnpm-store
