Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ build:
     - pnpm config set store-dir .pnpm-store
   script:
     - pnpm install # install dependencies
+    - pnpm start:dev
   cache:
     key:
       files:
