--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,10 +13,13 @@ build:
     - pnpm config set store-dir .pnpm-store
   script:
     - pnpm install # install dependencies
-    - pnpm start:dev
   cache:
     key:
       files:
         - pnpm-lock.yaml
     paths:
       - .pnpm-store
+
+dev:
+  script:
+    = pnpm start:dev
